--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Клан Игры</title>
+    <title>KAMJI - Главная страница</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/icon/kamji.png" alt="Клан Логотип">
+            <img src="kamji.png" alt="Клан Логотип">
             <h1>KAMJI</h1>
         </div>
     </header>
